# elicit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  elicit-landing.html  elicit-spec.md  railway.toml  waitlist.txt
src/: lib.rs  main.rs
src/config/: mod.rs
src/error/: types.rs
src/handlers/: extract.rs  health.rs  mod.rs  waitlist.rs
src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
src/models/: request.rs  response.rs
src/services/: mod.rs  ocr_service.rs  pdf_processor.rs
tests/: integration_tests.rs  unit_tests.rs
